Fixed some alignment issues with profile css

--- a/resources/sass/forum/profile.scss
+++ b/resources/sass/forum/profile.scss
@@ -4,104 +4,77 @@ body {
     overflow-y: hidden;
     overflow-x: hidden;
 }
-.profile-header {
-    width: 100%;
-    margin-bottom: 20vh;
-    display: inline-block;
-    position: relative;        
-    left: 50%;
-    transform: translateX(-50%);
-    #send-message {
-        * {
-            color: white;
-        }
-        .send-message-btn {
+.profile-container {
+    display: flex;
+    justify-content: center;
+    .profile-header {
+        width: 500px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        h1, i {
             color: white;
             font-size: 1rem;
         }
-    }
-    .avatar-container {
-        display: inline-block;
-        .status {
-            border: 1px solid black;
-            position: absolute;
-            left: 30px;
-            top: 30px;
-            background: green;
-            border-radius: 50%;
-            width: 25px;
-            height: 25px;
-            z-index: 5;
+        .profile-name-container {
+            position: relative;
+            * {
+                display: inline-block;
+                font-size: 2rem;
+            }
+            i {
+                position: absolute;
+                right: 200px;
+            }
         }
-        .avatar {
-            border: 1px solid black;
-            min-height: 200px;
-            min-width: 200px;
-            height: 25vh;
-            width: 25vh;
-            border-radius: 50%;
+        .avatar-container {
+            width: 300px;
+            height: 300px;
+            position: relative;
+            .avatar {
+                width: 300px;
+                height: 300px;
+            }
+            * {
+                border-radius: 50%;
+                border: 1px solid black;
+            }
+            .status {
+                width: 25px;
+                height: 25px;
+                position: absolute;
+                top: 32px;
+                left: 32px;
+            }
         }
-    }
-    #edit-btn {
-        text-align: center;
-    }
-    * {
-        h1 {
-            font-weight: 650;
-            font-size: 7.5vh;
-            text-align: center;
-            color: white;
+        .rank-container {
+            .rank {
+                color: gray;
+                font-size: 1.5rem;
+            }
         }
-        display: block;
-        position: relative;
-        margin: 0;
-        padding: 0;
-        left: 50%;
-        transform: translateX(-50%);
-    }
-    input[type="file"] {
-        width: 75%;
-    }
-    #rank-container {
-        position: relative;
-        min-height: 2.5rem;
-        height: 5vh;
-        #rank {
-            font-size: 1.5em;
-        }
-    }
-    #profile-name-container {
-        position: relative;
-        min-height: 3rem;
-        height: 5vh;
-        #profile-name {
-            color: white;
-            font-size: 2em;
-        }
-    }
-    * {
-        text-align: center;
     }
 }
 
-#ban-btn:hover {
+.ban-btn:hover {
     cursor: pointer;
 }
-#ban-btn {
+.ban-btn {
     text-align: center;
 }
-#ban-btn:hover {
+.ban-btn:hover {
     color:red;
 }
 
 .container {
     background: #212529;
-    border-top: 1px solid white;
     width: 100%;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     div {
+        h1 {color: gray;}
         * {
             color: white;
             font-size: 4rem;
